# sw

./: .approvers  .gitignore  .gitmodules  .job.yml  .syn_cpp_config  .warmd-ignore  BUILD  Gopkg.toml  Makefile  README.md  WORKSPACE  box-base.rb  box.rb  coverage.json  entrypoint.sh  replace.sh
nic/: .approvers  .clang-format  .gdbinit  .gitignore  .job.yml  BUILD  BUILD.bazel  Makefile  Makefile.nrmake  Makefile.old  README  README.build  README.md  Vagrantfile  bazel.rc  bld_cscope.sh  box-deps.rb  box.rb  build.mk  build_model.sh  build_model_elba.sh  build_pb_config.sh  debug_shell.py  depre_build.sh  diff  entrypoint.sh  iota.log.68  run-coverage  run.py  start-hal  start-hal-gdb  start-hal-stub  start-model  start-model-gdb
nic/.warmd-ansible/: playbook.yml
nic/agent/: .approvers  .job.yml  agent.go  box.rb
nic/agents/: Makefile  Makefile.bak
nic/apollo/: .approvers  .job.yml  README.md  box.rb
nic/asm/: Makefile
nic/bazel/: BUILD  common_deps.bzl
nic/cli/: cli_gen.py  csr.py  tenjin_wrapper.py
nic/conf/: README  apollo_coverage.json  asm_bin  capri_p4_table_map.json  capri_p4_table_spec.json  catalog.json  catalog_100g.json  catalog_capri.json  catalog_elba.json  catalog_hw.json  catalog_hw_16-0007.json  catalog_hw_16-0023.json  catalog_hw_68-0003.json  catalog_hw_68-0004.json  catalog_hw_68-0005.json  catalog_hw_68-0006.json  catalog_hw_68-0007.json  catalog_hw_68-0008.json  catalog_hw_68-0009.json  catalog_hw_68-0011.json  catalog_hw_68-0013.json  catalog_hw_DSC1-2Q100-8F16P.json  catalog_hw_P18669-001.json  catalog_hw_P18670-001.json  catalog_hw_P18671-001.json  catalog_hw_P26966-B21.json  catalog_hw_P26967-B21.json  catalog_hw_elba-haps.json  catalog_serdes_test_board.json  classic-plugins.json  coverage.json  coverage_asm.json  dev.json  gft_hbm_mem.json  hal.ini  hal.json  hal_classic.json  hal_coverage.json  hal_default.ini  hal_gft.json  (+24 more)
nic/coremgr/: coremgr.hpp  main.cc  module.mk
nic/debug_cli/: BUILD.backup  Makefile  Makefile.old  README.debugcli  README.md  cli.i  cli.sh  module_clicommon_cli.mk  module_clicommon_swig.mk  module_cligen.mk  penshell_main_old.py  run.sh
nic/delphi/: BUILD  Build.md  Makefile  Overview.md  Readme.md
nic/doc/: README-ALTFW.md  README-ASIC-UPDATE.md  README-ASSETS.cmd  README-BUILD.md  README-GDB.md  README-HAPS.md  README-NAPLES-FW.md  README-SSHD.md  README-TCLSH.md  README-TOOLS.md  README-naples-fw.md
nic/e2etests/: BUILD  Makefile  box.rb  consts.py  e2e.json  e2e_setup.py  main.py  sample_e2e_setup.cfg  test.py
nic/fte/: .approvers  .syntastic_cpp_config  BUILD  Makefile  README  fte.cc  fte.hpp  fte_common.hpp  fte_core.hpp  fte_ctx.cc  fte_ctx.hpp  fte_db.cc  fte_db.hpp  fte_flow.cc  fte_flow.hpp  fte_impl.hpp  fte_session.cc  fte_softq.cc  fte_softq.hpp  fte_txrx.cc  module.mk
nic/hal/: .approvers  .syntastic_cpp_config  BUILD  Makefile  Makefile.bak  README.md  hal.cc  hal.hpp  hal_cfg.cc  hal_devapi.cc  hal_devapi.hpp  hal_mem.cc  hal_module.cc  hal_module.hpp  hal_obj.cc  hal_state.cc  hal_trace.cc  hal_trace.hpp  main.cc  module_hal.mk  module_hal_devapi.mk  module_hal_mem.mk  module_hal_static.mk  module_haltrace.mk  module_lib_hal_src.mk  module_memrgns.mk  svc_gft.cc  svc_iris.cc
nic/include/: BUILD  README  accel_dev_if.h  accel_ring.h  acl_api.hpp  acl_tcam.hpp  adminq.h  app_redir_headers.hpp  app_redir_shared.h  arp_trans.hpp  asic_pd.hpp  asic_rw.hpp  base.h  base.hpp  bitmap.hpp  capri.hpp  capri_barco.h  capri_common.h  cpupkt_api.hpp  cpupkt_headers.hpp  dhcp_trans.hpp  directmap.hpp  dos_api.hpp  edma.hpp  edmaq.h  encap.hpp  endpoint_api.hpp  eth.h  eth_common.h  eventmgr.hpp  flow.hpp  fsm.hpp  fte.hpp  fte_common.hpp  fte_ctx.hpp  fte_db.hpp  ftl_dev_if.hpp  globals.hpp  hal.hpp  hal_cfg.hpp  (+51 more)
nic/linkmgr/: BUILD  cap_bx_api.cc  cap_mx_api.cc  cap_sbus_api.cc  cap_sbus_api.h  cap_sw_glue.h  cap_top_csr.cc  cap_top_csr.h  cpu_hal_if.cc  cpu_hal_if.h  linkmgr.cc  linkmgr.hpp  linkmgr_debug.hpp  linkmgr_debug_svc.cc  linkmgr_debug_svc.hpp  linkmgr_delphi.cc  linkmgr_delphi.hpp  linkmgr_event_recorder.cc  linkmgr_event_recorder.hpp  linkmgr_internal.hpp  linkmgr_ipc.cc  linkmgr_ipc.hpp  linkmgr_pd.cc  linkmgr_src.cc  linkmgr_src.hpp  linkmgr_state.cc  linkmgr_state.hpp  linkmgr_state_pd.cc  linkmgr_state_pd.hpp  linkmgr_svc.cc  linkmgr_svc.hpp  linkmgr_utils.cc  linkmgr_utils.hpp  main.cc  module_linkmgr.mk  module_linkmgr.mk.bkup  module_linkmgr_libsrc.mk  module_linkmgr_src.mk  module_linkmgrcsr.mk  module_linkmgrcsr_helpers.mk  (+10 more)
nic/make/: .approvers  Jobs.Makefile  Make.inc  Makefile-ARCH-aarch64.inc  Makefile-ARCH-x86_64.inc  Makefile.common  Makefile.docker  Makefile.inc  Makefile.inc.bak1  Makefile.jobs  Makefile.p4  Makefile.tests  Makefile_platform.inc  README.md  build.mk
nic/metaswitch/: .gitignore  .job.yml  Makefile  README  module.mk  module_metaswitch.mk  module_pegasus.mk  pdsa_main.cc  pdsa_stub_init.hpp  pegasus_main.cc  pegasus_trace.cc  pegasus_trace.hpp  pre.mk
nic/mkdefs/: build_firmware.sh  common.mk  docker.mk  image.mk  jobd_targets.mk  pkg.mk  post.mk  pre.mk
nic/model_sim/: BUILD  Makefile  cp_asic_bins.sh  simlaunch.py
nic/move_planner/: BUILD  blank-hal-mem.json  hal_mem.json  hal_mem_after.json
nic/moveable_objects/: BUILD  Makefile  malloc_stub.cc  malloc_stub.h  mom.cc  mom.h  mom_test.cc
nic/oci/: BUILD
nic/p4/: Makefile
nic/proto/: BUILD  BUILD.old  Makefile  Makefile.bak  Makefile.protobuf  README.md  device.proto  events.proto  module.mk  module_eventproto.mk  module_libeventproto.mk  module_proto.mk  types.proto
nic/proxy-e2etest/: BUILD  driver.cc  env  lib_driver.cc  lib_driver.hpp  ntls.hpp  pktgen.py
nic/sdk/: .approvers  .gitignore  .job.yml  BUILD  BUILD.gtest  Makefile  Makefile.nrmake  README.md  WORKSPACE  box.rb  entrypoint.sh
nic/sknobs_gen/: .gitignore  Makefile  cap_ppa_decoders.yaml  json_to_sknobs.py  sknobs_gen.sh
nic/sysmgr/: BUILD  Readme.md
nic/tools/: .approvers  .bashrc  README  apollo_test.py  asic_sw_combined_sanity.sh  bflog_sync.sh  bringup_mgmt_ifs.sh  build_buildroot.sh  build_diagfw.sh  (+132 more)
(+25620 files in other folders)
